# Voice-AI

./: .env.example  .gitignore  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  minimal_code.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
assemblyai/: SKILL.md  app.py
notebooks/: NOTEBOOK.md  assemblyai_api_checks.ipynb  assessment.ipynb
src/voice_ai_explorer/: api.py  audio_quality.py  cli.py  config.py  payloads.py  rendering.py  state.py  streaming.py  streamlit_app.py  ui.py
src/voice_ai_explorer/providers/: deepgram_api.py
tests/: test_audio_quality.py  test_payloads.py  test_rendering.py  test_streaming.py
